[package]
name = "forever"
version = "1.0.0"
edition = "2021"
description = "a simple lightweight CLI tool written in rust that automatically restarts a command if it exits/crashes"
authors = ["PikaDude <mail@pikadude.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PikaDude/forever"

[dependencies]

[profile.release]
lto = true